# HabbitsTracker

./: .env.sample  .gitignore  compose.yaml  pyproject.toml
conf/: celery.py  settings.py  urls.py
habits/: models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_perform_at.py  0003_habit_next_perform_at.py  0004_alter_habit_next_perform_at_and_more.py  0005_alter_habit_options.py
users/: models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_user_telegram_chat_id_alter_user_email.py
